estilos dos textos em blocos

--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -35,6 +35,29 @@ a:hover {
     text-decoration-line: underline;
 }
 
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    line-height: 2em;
+}
+
+section.normal{
+    background: white;
+    color: black;
+}
+
+section.imagem{
+    background: rgba(0, 0, 0, 0.432);
+    color: white;
+}
+
+section.imagem>p{
+    background-color: black;
+    width: 400px;
+
+}
+
 footer{
     background-color: black;
     text-align: center;
