--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,24 +1,39 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, san-serif; 
+    --fonte2: Passion One;
+    --fonte3: 'Sriracha', cursive;
+
+}
+
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
     background-color: black;
     color: white;
     text-align: center;
+  
 }
 
 header > h1 {
   padding-top: 50px;
   font-variant: small-caps;
+  font-family: var(--fonte2);
+  font-size: 10vw;
 }
 
 header  p {
@@ -40,6 +55,8 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -50,11 +67,13 @@ section.normal{
 section.imagem{
     background: rgba(0, 0, 0, 0.432);
     color: white;
+    
 }
 
-section.imagem>p{
+section.imagem >p{
     background-color: black;
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 
 }
 
