--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -67,13 +67,33 @@ section.normal{
 section.imagem{
     background: rgba(0, 0, 0, 0.432);
     color: white;
-    
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.541);
+    background-attachment: fixed;
 }
 
 section.imagem >p{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.507);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+
+}
+
+section > p {
+    padding-bottom: 1em;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
 
 }
 
